--- a/CodSoft/Landing page for CodSoft.html
+++ b/CodSoft/Landing page for CodSoft.html
@@ -1,91 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <title>Product Landing Page</title>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
     @import url('https://fonts.googleapis.com/css?family=Raleway:300,500,700');
-    /* Full CSS pasted here */
 
-    * { box-sizing: border-box; }
+    * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
       color: #090b08;
-      margin: 0;
       font-family: 'Raleway', sans-serif;
       font-weight: 300;
       background-color: #ffe9ef;
+      padding-top: 80px; /* Prevent header overlap */
     }
-    h1 { font-size: 1.7em; font-weight: 700; line-height: 1.5em; text-transform: uppercase; }
-    h2 { text-transform: uppercase; }
-    h4 { font-size: .8em; font-weight: 500; text-transform: uppercase; letter-spacing: 1px; }
-    h6 { font-weight: 500; }
+    h1, h2, h3, h4, h6 { text-transform: uppercase; }
+    h1 { font-size: 1.7em; font-weight: 700; line-height: 1.5em; }
     a { text-decoration: none; color: #090b08; }
     ul { list-style: none; }
     section { padding: 5.8em 2em 0; }
-    .title { display: flex; align-items: center; text-transform: uppercase; letter-spacing: 1px; padding-bottom: 1em; }
-    .title.title-right { justify-content: flex-end; }
-    .line { width: 3em; height: 1px; background-color: #000; margin-right: 1em; }
-    .line.line-right { order: 2; margin-right: 0; margin-left: 1em; }
-    .btn { display: inline-block; padding: .5em 1.5em; border: solid 1px #090b08; transition: all .3s ease-in; }
-    .btn:hover, .btn:focus { transform: translate(0px, -2px); box-shadow: 0px 10px 7px -9px rgba(0,0,0,0.75); transition: all .3s ease-out; }
+    .btn {
+      display: inline-block;
+      padding: .5em 1.5em;
+      border: solid 1px #090b08;
+      transition: all .3s ease-in;
+    }
+    .btn:hover {
+      box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
+      transform: scale(1.05);
+    }
 
-    /* All other CSS from your provided file goes here */
     /* Header */
-    header { display: flex; position: fixed; width: 100%; justify-content: space-around; z-index: 1; }
-    header:before { content: ""; position: absolute; background-color: #ffe9ef; width: 100%; height: 68%; z-index: -1; box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.22); }
-    /* Continue pasting all your CSS from the CSS section */
+    header {
+      display: flex;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      justify-content: space-around;
+      z-index: 10;
+      background: #ffe9ef;
+      padding: 10px 0;
+      box-shadow: 0px 3px 5px rgba(0,0,0,0.22);
+    }
+    #toggle-menu { display: none; }
+    .toggle-menu { display: none; cursor: pointer; font-size: 1.2em; padding: 10px; background-color: #ffe9ef; }
 
+    @media (max-width: 768px) {
+      .toggle-menu { display: block; }
+      .navbar {
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        width: 100%;
+        background: #ffe9ef;
+        left: 0;
+        top: 60px;
+        text-align: center;
+      }
+      #toggle-menu:checked + .navbar { display: flex; }
+    }
+
+    /* Image Scaling */
+    .image img {
+      width: 100%;
+      max-width: 300px;
+      height: auto;
+    }
     </style>
-  </head>
-  <body>
-    <!-- Paste the full HTML body content here (you already provided it) -->
-<header id="header">
-<!-- Brand Logo and other sections -->
-<!-- This part is unchanged, copy directly from your provided HTML -->
+</head>
+<body>
 
-<!-- Continue with all your HTML as you provided -->
-<a class="nav-brand" href="" target="_blank">
-  <img id="header-img" src="https://i.postimg.cc/8czjYqkS/Minimal-Premade-Logos-V02-04.png" alt="Pixel Skincare">
-</a>
-<input type="checkbox" id="toggle-menu" role="button">
-<label for="toggle-menu" class="toggle-menu">Menu</label>
-<nav id="nav-bar" class="navbar">
-  <ul class="menu">
-    <li><a class="nav-link" href="#featured">New in!</a></li>
-    <li><a class="nav-link" href="#collections">Collections</a></li>
-    <li><a class="nav-link" href="#about">About</a></li>
-    <li><a class="nav-link" href="#contact">Contact</a></li>
-  </ul>
-  <ul class="social-menu">
-    <li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-    <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-    <li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
-  </ul>
-</nav>
+<header id="header">
+  <a class="nav-brand" href="#" target="_blank">
+    <img id="header-img" src="https://i.postimg.cc/8czjYqkS/Minimal-Premade-Logos-V02-04.png" alt="Pixel Skincare">
+  </a>
+  <input type="checkbox" id="toggle-menu" role="button">
+  <label for="toggle-menu" class="toggle-menu">Menu</label>
+  <nav id="nav-bar" class="navbar">
+    <ul class="menu">
+      <li><a class="nav-link" href="#featured">New in!</a></li>
+      <li><a class="nav-link" href="#collections">Collections</a></li>
+      <li><a class="nav-link" href="#about">About</a></li>
+      <li><a class="nav-link" href="#contact">Contact</a></li>
+    </ul>
+    <ul class="social-menu">
+      <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
+      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+      <li><a href="#"><i class="fa fa-youtube-play"></i></a></li>
+    </ul>
+  </nav>
 </header>
 
-<!-- Continue pasting all your sections (hero, featured, collections, about, contact) exactly as they are -->
-
-<!-- Example for one section -->
 <section id="featured">
-<div class="title title-left">
-  <span class="line"></span><h3>New Friend!</h3>
-</div>
-<div class="wrapper">
-  <div class="image">
-    <img src="https://i.postimg.cc/DyM1SgNb/flower-copy.png" alt="Pixel Facial Cream">
+  <div class="title title-left">
+    <span class="line"></span><h3>New Friend!</h3>
   </div>
-  <div class="text">
-    <h2>Pixel Facial Cream</h2>
-    <p>A lightweight formula that packs a punch with avocado protein extract to strengthen skin's own moisture barrier, sealing in hydration to protect, nourish and soften skin.</p>
-    <a href="#" class=btn>Details</a>
+  <div class="wrapper">
+    <div class="image">
+      <img src="https://i.postimg.cc/DyM1SgNb/flower-copy.png" alt="Pixel Facial Cream">
+    </div>
+    <div class="text">
+      <h2>Pixel Facial Cream</h2>
+      <p>A lightweight formula that packs a punch with avocado protein extract to strengthen skin's own moisture barrier, sealing in hydration to protect, nourish and soften skin.</p>
+      <a href="#" class="btn">Details</a>
+    </div>
   </div>
-</div>
 </section>
 
-<!-- Add all other sections here exactly the same way -->
-
-  </body>
+</body>
 </html>
